--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,9 @@ apply plugin: 'java'
 repositories {
     // Use 'jcenter' for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    maven {
+        url "https://jcenter.bintray.com"
+    }
 }
 
 // In this section you declare the dependencies for your production and test code
